--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
-image: monachus/hugo
+image: rambabusaravanan/firebase
 
-pages:
-  script:
-  - hugo
-  artifacts:
-    paths:
-    - public
+stages:
+  - deploy
+
+deploy-prod:
+  stage: deploy
   only:
-  - master
+    - master
+  script:
+    -hugo && firebase deploy --only hosting -m "Pipe $CI_PIPELINE_ID Build $CI_BUILD_ID @ Hash ${CI_COMMIT_SHA:0:7}" --token $FIREBASE_TOKEN
