--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 
-baseURL = "https://quadrate-tech.firebaseapp.com/"
+baseURL = "https://quadrate-tech.web.app/"
 languageCode = "en-us"
 title = "Welcome to Quadrate Tech Guru | Free Tech School"
 theme = "mediumish-gohugo-theme"
