--- a/config.toml
+++ b/config.toml
@@ -11,17 +11,17 @@ disqusShortname = "M.F.M Fazrin"
 #googleAnalytics = "UA-1XXXXXXX1-1"s
 
 [params]
-  logo = "https://res.cloudinary.com/dw0ygv1p9/image/upload/v1571630073/logo_q5fipl.png"
+  logo = "/images/logo.png"
   description ="New Definition of blogging!"
   #mailchimp = "you can provide a mailchimp-link here"
 
 [params.author]
   name = "M.F.M Fazrin"
-  thumbnail = "https://res.cloudinary.com/dw0ygv1p9/image/upload/v1571630026/mypic_op9mzw.jpg"
+  thumbnail = "/images/mypic.jpg"
   description = "Content Posted By"
 
 [params.index]
-  picture = "https://res.cloudinary.com/dw0ygv1p9/image/upload/v1571630179/author_uczy2k.png"
+  picture = "/images/authorpost.png"
   title = "M.F.M Fazrin"
   subtitle = "Passionate Software Engineer & Full Stack Developer"
   mdtext = '''A dedicated and energetic individual seeking to join as a software engineer to contribute to the delivery of high quality software solutions. visit my <a href="https://fazrin0772049123.web.app/">profile & portfolio</a> link if you are interested know more about me'''
