--- a/config.toml
+++ b/config.toml
@@ -44,5 +44,5 @@ disqusShortname = "M.F.M Fazrin"
     url = "/"
 
 [params.adsense]
-client = "ca-pub-12345"
-inArticleSlot = "12345"
+client = "ca-pub-5415404685631285"
+inArticleSlot = "5497557054"
